// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<HalfLinePaddedBox /> > renders alternative blocks when true color is not supported 1`] = `
"          
Content   
          
"
`;

exports[`<HalfLinePaddedBox /> > renders nothing when screen reader is enabled 1`] = `
"Content
"
`;

exports[`<HalfLinePaddedBox /> > renders nothing when useBackgroundColor is false 1`] = `
"Content
"
`;

exports[`<HalfLinePaddedBox /> > renders standard background and blocks when true color is supported 1`] = `
"▄▄▄▄▄▄▄▄▄▄
Content   
▀▀▀▀▀▀▀▀▀▀
"
`;
